# cpp-assignment4

./: CMakeLists.txt  CompileLinux.sh  Main.cpp  README.md  RevisionHistory  config.ini
configfile/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h
features/: CMakeLists.txt
features/feature1/: CMakeLists.txt  Feature1.cpp  Feature1.h
features/feature2/: CMakeLists.txt  Feature2.cpp  Feature2.h
loadlib/: CMakeLists.txt  LoadLib.cpp  LoadLib.h
